--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -1,2 +1,20 @@
 
 __Interested in adding to this page?__ Please complete and submit our [contribution form](https://docs.google.com/forms/d/19Z8PwYZ-JQn_EIds5M3YfwgVGKJdTadeknPt770c8RU/viewform?usp=send_form) and we'll process your additions soon!
+
+#
+
+<article class="post">
+    <h1>{{ page.title }}</h1>
+
+    {% include post-tags.html %}
+
+    <div class="entry">
+        {{ content }}
+    </div>
+
+    <div class="date">
+        Written on {{ page.date | date: "%B %e, %Y" }}
+    </div>
+
+    {% include disqus.html disqus_identifier=page.disqus_identifier %}
+</article>
